--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 certifi==2023.7.22
+channels==4.0.0
+channels-redis==4.1.0
 charset-normalizer==3.2.0
 Django==4.2.4
 django-braces==1.14.0
@@ -8,11 +10,13 @@ django-memcache-status==2.3
 django-pylibmc==0.6.1
 djangorestframework==3.14.0
 idna==3.4
+msgpack==1.0.7
 Pillow==10.0.0
 pylibmc==1.6.3
 pymemcache==4.0.0
 python-memcached==1.59
 pytz==2023.3.post1
+redis==5.0.1
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
